--- a/symposion_project/templates/site_base.html
+++ b/symposion_project/templates/site_base.html
@@ -1,6 +1,7 @@
 {% extends "theme_base.html" %}
 
 {% load i18n %}
+{% load mptt_tags %}
 
 {% block extra_head_base %}
     <link rel="stylesheet" href="{{ STATIC_URL }}css/conference.css" />
@@ -9,7 +10,23 @@
 
 {% block nav %}
     <ul class="nav">
-        <li><a href="{% url speaker_dashboard %}">Speaker</a></li>
+        {% recursetree menuitems %}
+            {% if not node.is_leaf_node %}
+                <li id="tab_{{ node.slug }}" class="dropdown">
+                    <a href="#"
+                          class="dropdown-toggle"
+                          data-toggle="dropdown">
+                          {{ node.name }}
+                          <b class="caret"></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        {{ children }}
+                    </ul>
+                </li>
+            {% else %}
+                <li id="tab_{{ node.slug }}"><a href="{{ node.url }}">{{ node.name }}</a></li>
+            {% endif %}
+        {% endrecursetree %}
     </ul>
 {% endblock %}
 
