Put some basic details on the home page.

--- a/symposion_project/templates/homepage.html
+++ b/symposion_project/templates/homepage.html
@@ -8,36 +8,18 @@
 {% block body_class %}home{% endblock %}
 
 {% block body %}
-    
-    <h1>{% trans "Welcome to Pinax" %}</h1>
-    
+
+    <h1>{% trans "PyCon ZA 2012" %}</h1>
+
     <p>
         {% blocktrans %}
-        <b>Pinax</b> is a <a href="http://djangoproject.com/">Django</a>
-        project intended to provide a starting point for websites. By
-        integrating numerous reusable Django apps to take care of the
-        things that many sites have in common, it lets you focus on what
-        makes your site different.
+        <ul>
+          <li><b>Dates:</b> 4 & 5 October 2012</li>
+          <li><b>Where:</b> Cape Town</li>
+        </ul>
         {% endblocktrans %}
     </p>
-    
-    <p>
-        {% blocktrans %}
-        For more information about Pinax, see
-        <a href="http://pinaxproject.com/">http://pinaxproject.com/</a>.
-        {% endblocktrans %}
-    </p>
-    
-    <h2>{% trans "About this project" %}</h2>
-    
-    <p>
-        {% blocktrans %}
-        This project lays the foundation for all other Pinax starter projects. It
-        provides the project directory layout and some key infrastructure apps on
-        which the other starter projects are based.
-        {% endblocktrans %}
-    </p>
-    
+
     <hr />
     {% if user.is_authenticated %}
         {% url what_next as what_next_url %}
@@ -51,5 +33,5 @@
             <p>{% blocktrans %}You can <a href="{{ login_url }}">Log in</a> to try out the site.{% endblocktrans %}</p>
         {% endifsetting %}
     {% endif %}
-    
+
 {% endblock %}
